--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-	"useTabs": false,
-	"singleQuote": false,
-	"tabWidth": 2,
-	"trailingComma": "all",
-	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+ "useTabs": false,
+ "singleQuote": false,
+ "tabWidth": 2,
+ "trailingComma": "none",
+ "printWidth": 100,
+ "plugins": ["prettier-plugin-svelte"],
+ "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
